# drive-rs

./: .env.example  .gitignore  Cargo.toml  INSTALL.md  README.md  TODO  build.rs  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: main.rs
backend/src/handlers/: files.rs  folders.rs  mod.rs  transfer.rs
backend/src/middleware/: auth.rs
backend/src/models/: file.rs  folder.rs  share.rs  user.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
frontend/src/routes/drive/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/transfer/: +page.svelte
src/: main.rs
src/config/: mod.rs
src/handlers/: auth.rs  share.rs
src/models/: mod.rs  transfer.rs
ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
ui/src/: app.css
ui/src/lib/api/: client.js
ui/src/lib/stores/: auth.js
ui/src/routes/: +layout.svelte
ui/src/routes/drive/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/share/[token]/: +page.svelte
ui/src/routes/transfer/: +page.svelte
